--- a/GenericWebShop/GenericWebShop/Views/Home/Contact.cshtml
+++ b/GenericWebShop/GenericWebShop/Views/Home/Contact.cshtml
@@ -3,9 +3,4 @@
 }
 
 <h2>Contact Us</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut massa lectus, ac sodales justo. 
-In hac habitasse platea dictumst. Vestibulum eget purus justo. Aliquam ultrices, ante faucibus imperdiet 
-imperdiet, tellus magna porta elit, eget commodo augue elit vitae risus. Curabitur rutrum, nibh at tincidunt 
-aliquet, lectus dolor fringilla ante, id consequat est ipsum in leo. Duis a convallis magna. Vivamus eget 
-felis elit, ac scelerisque odio. Morbi ante mauris, sollicitudin eu posuere quis, imperdiet sed ligula. 
-Aliquam suscipit tellus vel nunc elementum fringilla.</p>
+<p>Basic contact display goes here.</p>
